# wparser

./: CMakeLists.txt
src/: LEB128.cpp  LEB128.h  codegen.cpp  codegen.h  common.h  parser.cpp  parser.h  symbols.h  wparser.cpp  wparser.h
src/tools/: CMakeLists.txt  wasm_pc2func.cpp
test/: CMakeLists.txt  codegen_test.cpp  func_addresser.cpp
